{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 163,
  "lineage": "33c073c2-e269-138f-f197-6ecadef12875",
  "resources": [
    {
      "module": "module.module_aws_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-023d6c5b3a28a2d1d",
            "arn": "arn:aws:ec2:ap-southeast-1:141669754064:instance/i-0fb719784345c24d0",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fb719784345c24d0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.small",
            "ipv6_address_count": 0,
            "key_name": "ins-keypair0",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-099ea346e6a09f7b3"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-099ea346e6a09f7b3",
            "private_dns": "ip-10-0-1-154.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.154",
            "public_dns": "ec2-13-212-182-199.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.212.182.199",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-088111b0318ad31ee",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0278a9869fb27180a",
            "tags": {
              "Name": "ins0"
            },
            "tags_all": {
              "Name": "ins0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f0ff39a5af8987d1"
            ]
          },
          "dependencies": [
            "module.module_aws_instance.aws_key_pair.keypair0",
            "module.module_aws_instance.aws_network_interface.nic0",
            "module.module_aws_network.aws_subnet.subnet0",
            "module.module_aws_network.aws_vpc.net0",
            "module.module_aws_security.aws_security_group.sg0"
          ]
        }
      ]
    },
    {
      "module": "module.module_aws_instance",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "nic0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:141669754064:network-interface/eni-099ea346e6a09f7b3",
            "attachment": [
              {
                "attachment_id": "eni-attach-0e07f1f3da0a9cf99",
                "device_index": 0,
                "instance": "i-0fb719784345c24d0"
              }
            ],
            "id": "eni-099ea346e6a09f7b3",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:09:93:3c:f1:39",
            "owner_id": "141669754064",
            "private_dns_name": "ip-10-0-1-154.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.154",
            "private_ip_list": [
              "10.0.1.154"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.154"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0f0ff39a5af8987d1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0278a9869fb27180a",
            "tags": {
              "Name": "ins-nic0"
            },
            "tags_all": {
              "Name": "ins-nic0"
            }
          },
          "dependencies": [
            "module.module_aws_network.aws_subnet.subnet0",
            "module.module_aws_network.aws_vpc.net0",
            "module.module_aws_security.aws_security_group.sg0"
          ]
        }
      ]
    },
    {
      "module": "module.module_aws_network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:141669754064:internet-gateway/igw-06d41f6531ce836bf",
            "id": "igw-06d41f6531ce836bf",
            "owner_id": "141669754064",
            "tags": {
              "Name": "igw0"
            },
            "tags_all": {
              "Name": "igw0"
            },
            "vpc_id": "vpc-07554240487c976f8"
          },
          "dependencies": [
            "module.module_aws_network.aws_vpc.net0"
          ]
        }
      ]
    },
    {
      "module": "module.module_aws_network",
      "mode": "managed",
      "type": "aws_route",
      "name": "route0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06d41f6531ce836bf",
            "id": "r-rtb-056b2d7522036a9ce1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-056b2d7522036a9ce",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.module_aws_network.aws_internet_gateway.igw0",
            "module.module_aws_network.aws_route_table.rt0",
            "module.module_aws_network.aws_vpc.net0"
          ]
        }
      ]
    },
    {
      "module": "module.module_aws_network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:141669754064:route-table/rtb-056b2d7522036a9ce",
            "id": "rtb-056b2d7522036a9ce",
            "owner_id": "141669754064",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06d41f6531ce836bf",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07554240487c976f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.module_aws_network.aws_vpc.net0"
          ]
        }
      ]
    },
    {
      "module": "module.module_aws_network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c4c24adced3af3f6",
            "route_table_id": "rtb-056b2d7522036a9ce",
            "subnet_id": "subnet-0278a9869fb27180a"
          },
          "dependencies": [
            "module.module_aws_network.aws_route_table.rt0",
            "module.module_aws_network.aws_subnet.subnet0",
            "module.module_aws_network.aws_vpc.net0"
          ]
        }
      ]
    },
    {
      "module": "module.module_aws_network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:141669754064:subnet/subnet-0278a9869fb27180a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0278a9869fb27180a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "141669754064",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet0"
            },
            "tags_all": {
              "Name": "subnet0"
            },
            "vpc_id": "vpc-07554240487c976f8"
          },
          "dependencies": [
            "module.module_aws_network.aws_vpc.net0"
          ]
        }
      ]
    },
    {
      "module": "module.module_aws_network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "net0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:141669754064:vpc/vpc-07554240487c976f8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a174e84eec0609da",
            "default_route_table_id": "rtb-04387594ffe513ba9",
            "default_security_group_id": "sg-0f3616d211dac8090",
            "dhcp_options_id": "dopt-b9be6ede",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07554240487c976f8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04387594ffe513ba9",
            "owner_id": "141669754064",
            "tags": {
              "Name": "net0"
            },
            "tags_all": {
              "Name": "net0"
            }
          }
        }
      ]
    },
    {
      "module": "module.module_aws_security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:141669754064:security-group/sg-0f0ff39a5af8987d1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f0ff39a5af8987d1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg0",
            "name_prefix": "",
            "owner_id": "141669754064",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg0"
            },
            "tags_all": {
              "Name": "sg0"
            },
            "timeouts": null,
            "vpc_id": "vpc-07554240487c976f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.module_aws_network.aws_vpc.net0"
          ]
        }
      ]
    },
    {
      "module": "module.module_aws_security",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "egress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress-allow-all",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:141669754064:security-group-rule/sgr-0836fa633e26ba1d9",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0836fa633e26ba1d9",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0f0ff39a5af8987d1",
            "security_group_rule_id": "sgr-0836fa633e26ba1d9",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.module_aws_network.aws_vpc.net0",
            "module.module_aws_security.aws_security_group.sg0"
          ]
        }
      ]
    },
    {
      "module": "module.module_aws_security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ingress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress-allow-http",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:141669754064:security-group-rule/sgr-0d81605bb817c0ca2",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0d81605bb817c0ca2",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0f0ff39a5af8987d1",
            "security_group_rule_id": "sgr-0d81605bb817c0ca2",
            "tags": {
              "Name": "ingress-allow-http"
            },
            "tags_all": {
              "Name": "ingress-allow-http"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.module_aws_network.aws_vpc.net0",
            "module.module_aws_security.aws_security_group.sg0"
          ]
        },
        {
          "index_key": "ingress-allow-icmp",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:141669754064:security-group-rule/sgr-010f09f77607662d2",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": -1,
            "id": "sgr-010f09f77607662d2",
            "ip_protocol": "icmp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0f0ff39a5af8987d1",
            "security_group_rule_id": "sgr-010f09f77607662d2",
            "tags": {
              "Name": "ingress-allow-icmp"
            },
            "tags_all": {
              "Name": "ingress-allow-icmp"
            },
            "to_port": -1
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.module_aws_network.aws_vpc.net0",
            "module.module_aws_security.aws_security_group.sg0"
          ]
        },
        {
          "index_key": "ingress-allow-ssh",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:141669754064:security-group-rule/sgr-0f8e6372df1f20bcf",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0f8e6372df1f20bcf",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0f0ff39a5af8987d1",
            "security_group_rule_id": "sgr-0f8e6372df1f20bcf",
            "tags": {
              "Name": "ingress-allow-ssh"
            },
            "tags_all": {
              "Name": "ingress-allow-ssh"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.module_aws_network.aws_vpc.net0",
            "module.module_aws_security.aws_security_group.sg0"
          ]
        }
      ]
    },
    {
      "module": "module.module_gcp_instance",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "ins",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2404-noble-amd64-v20241219",
                    "labels": {
                      "goog-terraform-provisioned": "true"
                    },
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 25,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/prj0-443107/zones/us-central1-a/disks/bootdisk0"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-01-01T18:47:25.191-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/prj0-443107/zones/us-central1-a/instances/ins0",
            "instance_id": "9170431087671263443",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAII8IWR/eTBWUCznY/KgzuxR4vfULGLJ26yDqsBvxvi2V"
            },
            "metadata_fingerprint": "P5W0q6rK86s=",
            "name": "ins0",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.172.115.147",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/prj0-443107/global/networks/net0",
                "network_ip": "10.0.1.5",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/prj0-443107/regions/us-central1/subnetworks/subnet0",
                "subnetwork_project": "prj0-443107"
              }
            ],
            "project": "prj0-443107",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj0-443107/zones/us-central1-a/instances/ins0",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "egress-allow-all",
              "ingress-allow-http",
              "ingress-allow-icmp",
              "ingress-allow-ssh"
            ],
            "tags_fingerprint": "yAFCUaJt-bU=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "module.module_gcp_instance.google_compute_disk.bootdisk0",
            "module.module_gcp_network.google_compute_network.net0",
            "module.module_gcp_network.google_compute_subnetwork.subnet0"
          ]
        }
      ]
    },
    {
      "module": "module.module_gcp_network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "net0",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/prj0-443107/global/networks/net0",
            "mtu": 0,
            "name": "net0",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "6986325469014845035",
            "project": "prj0-443107",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj0-443107/global/networks/net0"
          }
        }
      ]
    },
    {
      "module": "module.module_gcp_network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet0",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-11-28T22:01:00.872-08:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/prj0-443107/regions/us-central1/subnetworks/subnet0",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "subnet0",
            "network": "https://www.googleapis.com/compute/v1/projects/prj0-443107/global/networks/net0",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "prj0-443107",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj0-443107/regions/us-central1/subnetworks/subnet0",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 1558724517661304435
          },
          "dependencies": [
            "module.module_gcp_network.google_compute_network.net0"
          ]
        }
      ]
    },
    {
      "module": "module.module_gcp_security",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fw",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "egress-allow-all",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2025-01-07T05:55:08.864-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/prj0-443107/global/firewalls/egress-allow-all",
            "log_config": [],
            "name": "egress-allow-all",
            "network": "https://www.googleapis.com/compute/v1/projects/prj0-443107/global/networks/net0",
            "priority": 1000,
            "project": "prj0-443107",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj0-443107/global/firewalls/egress-allow-all",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "egress-allow-all"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.module_gcp_network.google_compute_network.net0"
          ]
        },
        {
          "index_key": "ingress-allow-http",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-01-23T00:20:45.989-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/prj0-443107/global/firewalls/ingress-allow-http",
            "log_config": [],
            "name": "ingress-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/prj0-443107/global/networks/net0",
            "priority": 1000,
            "project": "prj0-443107",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj0-443107/global/firewalls/ingress-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ingress-allow-http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.module_gcp_network.google_compute_network.net0"
          ]
        },
        {
          "index_key": "ingress-allow-icmp",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2025-01-05T05:19:52.097-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/prj0-443107/global/firewalls/ingress-allow-icmp",
            "log_config": [],
            "name": "ingress-allow-icmp",
            "network": "https://www.googleapis.com/compute/v1/projects/prj0-443107/global/networks/net0",
            "priority": 1000,
            "project": "prj0-443107",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj0-443107/global/firewalls/ingress-allow-icmp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ingress-allow-icmp"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.module_gcp_network.google_compute_network.net0"
          ]
        },
        {
          "index_key": "ingress-allow-ssh",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-01-05T05:19:52.140-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/prj0-443107/global/firewalls/ingress-allow-ssh",
            "log_config": [],
            "name": "ingress-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/prj0-443107/global/networks/net0",
            "priority": 1000,
            "project": "prj0-443107",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj0-443107/global/firewalls/ingress-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ingress-allow-ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.module_gcp_network.google_compute_network.net0"
          ]
        }
      ]
    }
  ]
}